Я конечно не знаток, но тебе надо сходить потрогать траву
